--- a/package.json
+++ b/package.json
@@ -13,9 +13,20 @@
     "ts-jest": "^27.1.2",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.3.0"
+    "tslint-plugin-prettier": "^2.3.0",
+    "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@line/bot-sdk": "^7.4.0"
-  }
+    "@line/bot-sdk": "^7.4.0",
+    "typedoc": "^0.22.10"
+  },
+  "name": "ntmc_lineapp",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
